apps/kube/notification-bot/manifests/notification-bot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-bot
  namespace: discord
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-bot
  template:
    metadata:
      labels:
        app: notification-bot
    spec:
      serviceAccountName: notification-bot
      containers:
      - name: notification-bot
        image: kbve/notification-bot:1.7.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
