apps/kube/notification-bot/manifests/notification-bot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-bot
  namespace: discord
spec:
  type: ClusterIP
  selector:
    app: notification-bot
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
