apps/kube/notification-bot/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: notification-bot-route
    namespace: discord
spec:
    parentRefs:
        - name: kbve-gateway
          namespace: kbve
    hostnames:
        - notification.kbve.com
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: notification-bot
                port: 3000
