apps/kube/notification-bot/manifests/notification-bot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: notification-bot
    namespace: discord
    annotations:
        kubernetes.io/ingress.class: nginx
        cert-manager.io/cluster-issuer: letsencrypt-http
        nginx.ingress.kubernetes.io/proxy-body-size: '10m'
        nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
        nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
spec:
    tls:
        - hosts:
              - notification.kbve.com
          secretName: notification-bot-tls
    rules:
        - host: notification.kbve.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: notification-bot
                            port:
                                number: 3000
